[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "(placeholder) 'no_std' backend-agnostic debug-GUI lib."
documentation = "https://docs.rs/edd"
keywords = ["imgui", "gui"]
categories = [ "gui", "no-standard-library" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/fate"
name = "edd"
version = "0.1.0" # remember to update html_root_url

[dependencies.vek]
optional = false
path = "../vek"
version = "0.1.0"

