[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "(placeholder) Derive structs for optimizing the processing of many elements, aiming for maximum cache-efficiency. Related to AoS vs SoA."
documentation = "https://docs.rs/many-derive"
keywords = ["derive", "data-oriented design", "cache"]
categories = [ "algorithms", "data-structures", "no-standard-library" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/fate"
name = "many-derive"
version = "0.1.0"


[features]
wizard_is_Clone = []
sections_struct = []

[dependencies]
lazy_static = "0.2.5"
num-traits = "0.1.37"
