[package]
name = "fate-math"
description = "Shared API layer for math primitives and functions"
version = "0.1.0"
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]

[dependencies]
vek = { version = "~0.9.0", features = ["repr_simd", "serde", "image", "vec8", "vec16", "vec32", "vec64", "uv", "uvw"] }
