[package]
authors = ["Yoan Lecoq <yoanlecoq.io@gmail.com>"]
description = "Colorful vector+matrix+quaternion+rectangle library for graphics, with focus on intent."
documentation = "http://yoanlcq.github.io/vek"
homepage = "https://github.com/yoanlcq/fate/tree/master/vek"
keywords = ["vector", "quaternion", "matrix", "rect", "rgb", "rgba", "xyz", "xyzw", "lerp"]
categories = [ "algorithms", "data-structures", "no-standard-library", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/yoanlcq/fate"
name = "vek"
version = "0.1.0"

[dependencies]
num-traits = "0.1.39"
num-integer = "0.1.34"
